force-app/main/default/objects/UUID_Log_Event__e/UUID_Log_Event__e.object-meta.xml
<CustomObject>
    <label>UUID Log Event</label>
    <pluralLabel>UUID Log Events</pluralLabel>
</CustomObject>