force-app/main/default/objects/UUID_Log_Event__e/fields/Hash_Payload__c.field-meta.xml
<CustomField>
    <fullName>Hash_Payload__c</fullName>
    <description>Hash value generated while making request</description>
    <label>Hash_Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>