force-app/main/default/objects/UUID_Log_Event__e/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>Record Id specific to use case</description>
    <label>Reference_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>