force-app/main/default/objects/UUID_Log_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of UUID</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>