force-app/main/default/objects/UUID_Log_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>List of use cases based on functionalities</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>