force-app/main/default/objects/UUID_Log_Event__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>The UUID value created based on request made</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>